--- a/serviceOwner.json.example
+++ b/serviceOwner.json.example
@@ -4,7 +4,7 @@
   "txOperatorMnemonic": "",
   "txOperatorMnemonicPw": "",
   "liliumFeeAddress": "",
-  "liliumFeeNanoErg": 5000000,
+  "liliumFeePercent": 5000000,
   "minTxOperatorFeeNanoErg": 1000000,
   "minerFeeNanoErg": 1523000,
   "nodeUrl": "http://213.239.193.208:9052",
