--- a/serviceOwner.json.example
+++ b/serviceOwner.json.example
@@ -7,6 +7,7 @@
   "liliumFeePercent": 5000000,
   "minTxOperatorFeeNanoErg": 1000000,
   "minerFeeNanoErg": 1523000,
+  "minBoxValueNanoErg": 1000000,
   "nodeUrl": "http://213.239.193.208:9052",
   "apiUrl": "https://tn-ergo-explorer.anetabtc.io",
   "dataBaseKey": "",
