--- a/serviceOwner.json.example
+++ b/serviceOwner.json.example
@@ -4,7 +4,8 @@
   "txOperatorMnemonic": "",
   "txOperatorMnemonicPw": "",
   "liliumFeeAddress": "",
-  "liliumFeePercent": 5000000,
+  "liliumFeePercent": 5,
+  "extraFeaturePercent": 2,
   "minTxOperatorFeeNanoErg": 1000000,
   "minerFeeNanoErg": 1523000,
   "minBoxValueNanoErg": 1000000,
